Update toggleSuperAdmin API to always send {"superAdmin": false}